# Isaco

./: .env  README.md  main.py  pyproject.toml  script.sh
UI/: __init__.py  row.py  table.py
models/: __init__.py  db.py  product.py
