[tool.poetry]
package-mode = false
name = "isaco"
version = "0.1.0"
description = ""
authors = ["Hadi Mohseni <hadimohseni1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
